<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:id="@+id/act_login"
    android:background="#6FFFFAD3">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/pen_note"/>


    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/img_login"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="Enter your email"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/edt_email"
        android:layout_margin="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"/>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_password"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:onClick="Login"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:backgroundTint="@color/purple_500"
            android:textColor="@color/white"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:layout_below="@+id/btn_layout"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/purple_500"
        android:textColor="@color/white"/>

</RelativeLayout>