...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:id="@+id/act_forgot_password"
    android:background="#6FFFFAD3">

    <TextView
        android:id="@+id/title_pass_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
